--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,9 +15,10 @@
       </div>
     <div class="card-footer text-muted">
         <div class="form-group mb-2">
-            <label for="longURL">Enter the new URL:</label>
-            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-            <button type="submit" class="btn btn-primary">Update</button>
+            <form method="POST" action="/urls/<%= shortURL %>">
+            <label for="newLongURL">Enter the new URL:</label>
+            <input class="form-control" type="text" name="newLongURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Update</button></form>
           </div>
     </div>
   </div>
