--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,9 +15,9 @@
       </div>
     <div class="card-footer text-muted">
         <div class="form-group mb-2">
-            <form method="POST" action="/urls/<%= shortURL %>">
+            <form method="POST" action="/urls/<%= shortURL %>" >
             <label for="newLongURL">Enter the new URL:</label>
-            <input class="form-control" type="text" name="newLongURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <input class="form-control" type="text" name="newLongURL" placeholder="http://" style="width: 300px; margin: 1em; text-align: center; ">
             <button type="submit" class="btn btn-primary">Update</button></form>
           </div>
     </div>
