--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,11 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         </div>
       </div>
+      <form method="POST" action="/login">
+        <input class="form-control" type="text" name="username" placeholder="type your username please" style="width: 300px; margin: 1em; text-align: center; ">
+        <button type="submit" class="btn btn-primary">Login</button>
+
+      </form>
     </nav>
   </header>
   
