--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,19 +11,20 @@
         </div>
       </div>
           <div class="username-class mr-3" style="float: right;">       
-          <% if (user) { %>
-           
-              <span class="navbar-text" style="box-shadow: black;">Logged In As: <%= user.email %>!</span></div>
-              <form method="POST" action="/logout">
-                <button type="submit" class="btn btn-primary">Logout</button>
-              </form>
-        
-        <% } else { %>
-          <form method="POST" action="/login">
-            <input class="form-control" type="text" name="username" placeholder="type your username please" style="width: 300px; margin: 1em; text-align: center; ">
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
-        <% } %>
+            <% if (!user || !user.email) { %>
+              <div class=“navbar-nav”>
+                      <a class="nav-item nav-link" href="/login">Login</a>
+                      <a class="nav-item nav-link" href="/register">Register</a>
+              </div>
+          <% } else { %> 
+            
+            <div class="username-class mr-3">       
+            <span class="navbar-text">Logged In As: <%= user.email %>!</span></div>
+            <br/>
+            <br/>
+            <form class="form-inline ml-auto" action="/logout" method="POST">
+           <button type="submit" class="btn btn-outline-dark" data-toggle="#sidebar" id="sidebar-toggle" class="navbar-right navbar-toggle">Logout</button> </form>   
+          <% } %>
         </div>
         
       </div>
